--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "dev": "node server.js"
   },
+ 
   "dependencies": {
     "@supabase/supabase-js": "2.58.0",
     "axios": "1.12.2",
@@ -16,12 +17,11 @@
     "form-data": "4.0.4",
     "helmet": "7.1.0",
     "stripe": "19.1.0",
-    "debug": "4.3.4"
+    "debug": "4.3.4",
+    "dotenv": "16.4.5"
   },
-  "overrides": {
-    "debug": "4.3.4"
-  },
-  "engines": {
-    "node": "20.x"
-  }
+  "overrides": { "debug": "4.3.4" },
+  "engines": { "node": "20.x" }
 }
+
+
