--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "2.58.0",
     "axios": "1.12.2",
     "cors": "2.8.5",
+    "dotenv": "16.4.5",
     "express": "4.19.2",
     "express-rate-limit": "6.11.2",
     "form-data": "4.0.4",
     "helmet": "7.1.0",
-    "stripe": "19.1.0",
-    "dotenv": "16.4.5"
+    "morgan": "1.10.0",
+    "stripe": "19.1.0"
   },
   "engines": { "node": "20.x" }
 }
