--- a/package.json
+++ b/package.json
@@ -18,5 +18,7 @@
     "morgan": "1.10.0",
     "stripe": "19.1.0"
   },
-  "engines": { "node": "20.x" }
+  "engines": {
+    "node": "20.x"
+  }
 }
