--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build:css": "tailwindcss -i ./src/tw.css -o ./public/tw.css --minify",
+    "build": "npm run build:css",
+    "dev:css": "tailwindcss -i ./src/tw.css -o ./public/tw.css --watch",
+    "dev:server": "nodemon --verbose --watch server.js --watch public --ext js,json,html --signal SIGTERM --exec \"node --enable-source-maps server.js\"",
+    "dev": "concurrently -k --success=first -n SERVER,CSS -c blue,magenta \"npm:dev:server\" \"npm:dev:css\""
   },
   "dependencies": {
     "@paypal/checkout-server-sdk": "^1.0.3",
@@ -18,6 +23,13 @@
     "helmet": "7.1.0",
     "morgan": "1.10.0",
     "stripe": "19.1.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
+    "concurrently": "^9.0.1",
+    "nodemon": "^3.1.0"
   },
   "engines": {
     "node": "20.x"
