--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "form-data": "4.0.4",
     "helmet": "7.1.0",
     "morgan": "1.10.0",
-    "stripe": "19.1.0",
-    "cookie-parser": "^1.4.7"
+    "stripe": "19.1.0"
+    
     
     
   },
