--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@paypal/checkout-server-sdk": "^1.0.3",
     "@supabase/supabase-js": "2.58.0",
     "axios": "1.12.2",
+    "cookie-parser": "^1.4.7",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "express": "4.19.2",
@@ -23,16 +24,13 @@
     "helmet": "7.1.0",
     "morgan": "1.10.0",
     "stripe": "19.1.0"
-    
-    
-    
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18",
     "concurrently": "^9.0.1",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18"
   },
   "engines": {
     "node": "20.x"
