--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "form-data": "4.0.4",
     "helmet": "7.1.0",
     "morgan": "1.10.0",
+    "nodemailer": "^7.0.10",
     "stripe": "19.1.0"
   },
   "devDependencies": {
